templates/static/css/style.css
/* Based on SOLID by Carlos Alvarez (http://alvarez.is) */

/*
 * COLORS
 * Old nav bg: #384452
 * New nav bg: #202020
 * Old accent: #00b3fe
 * New accent: #e11a1a
 */

* {
  margin: 0;
  padding: 0px;
}

body {
  background: url('/static/img/dod-guy.png');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center;
  background-color: #202020;
  margin: 0;
  height: 100%;
  color: #eeeeee;
  font-weight: 400;
  font-family: 'Lato', sans-serif;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 400;
  font-family: 'Lora', serif;
}

p {
  padding: 0;
  margin-bottom: 12px;
  font-size: 16px;
  line-height: 24px;
  margin-top: 10px;
}

img {
  height: auto;
  max-width: 100%;
}

a {
  color: #e11a1a;
  padding: 0;
  margin: 0;
  text-decoration: none;
}

a:hover,
a:focus {
  text-decoration: none;
  color: #e11a1a;
}

::selection {
  color: #fff;
  text-shadow: none;
  background: #2B2E31;
}

::-moz-selection  {
  color: #fff;
  text-shadow: none;
  background: #2B2E31;
}

.centered {
  text-align: center
}

.navbar {
  min-height: 70px;
  padding-top: 10px;
  margin-bottom: 0px;
}

.navbar-default .navbar-nav > li > a {
  color: #eeeeee;
  font-size: 14px;
  font-weight: 700;
  font-family: 'Lora', sans-serif;
}

.navbar-default .navbar-nav > li > a:hover {
  color: #e11a1a;
}

.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color: #e11a1a;
  background-color: transparent;
}

.navbar-default {
  background-color: #080808;
  border-color: transparent;
}

#twrap {
  margin-top: 0px;
  padding-top: 18px;
  padding-bottom: 10px;
  text-align: center;
  min-height: 120px;
  width: 100%;
  background-attachment: relative;
  background-position: center center;

  -webkit-background-size: 100%;
  -moz-background-size: 100%;
  -o-background-size: 100%;
  background-size: 100%;

  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;

  position: relative;
  background: #3E0000;
  overflow: hidden;
}

#twrap:before {
  content: ' ';
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 0;
  opacity: 0.05;
  background-repeat: no-repeat;
  background-position: 50% 0;
  -ms-background-size: cover;
  -o-background-size: cover;
  -moz-background-size: cover;
  -webkit-background-size: cover;
  background-size: cover;
}

#footerwrap {
  padding-top: 30px;
  padding-bottom: 30px;
  background: transparent;
}

.ctitle {
  color: white;
  margin-bottom: 15px;
}

/* adamzap */

ol, ul {
  margin-top: 10px;
  padding-left: 20px;
  font-size: 16px;
}

.navbar-header img {
  padding-top: 7px;
}

.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
  background-color: #202020;
  color: #e11a1a;
}

.hline-r {
  border-bottom: 2px solid #e11a1a;
  margin-bottom: 25px;
}

table {
  font-size: 16px;
}

tbody tr:hover {
  background-color: #333333;
}

.gold {
  color: #FFFF00;
}

.silver {
  color: #C0C0C0;
}

.bronze {
  color: #CD7F32;
}

.gold-row {
  background-color: rgba(255, 255, 0, 0.1);
}

.silver-row {
  background-color: rgba(192, 192, 192, 0.1);
}

.bronze-row {
  background-color: rgba(205, 127, 50, 0.1);
}

#twrap a {
  color: white;
}

#filter {
  width: 120px;
  color: #eeeeee;
  background: none;
  margin-left: 8px;
  padding-left: 6px;
  font-weight: normal;
  border-radius: 16px;
  border: solid 2px #e11a1a;
}

#sidebar {
  margin-top: 30px;
}

#voting-result {
  width: 100%;
  color: #202020;
}

h4.voting {
  margin-bottom: 2px;
}

h4.voting label {
  color: #eeeeee;
}

.hline-r-duels {
  border-bottom: 2px solid #e11a1a;
  margin-bottom: 0;
}

.social-icon {
  padding: 0 !important;
}

.social-icon img {
  margin-top: 8px;
  padding-left: 13px;
}

ol li, ol li ul li {
  margin-top: 10px;
}

.duel-icons {
  float: right;
}

.duel-icons img {
  margin-left: 4px;
  padding-bottom: 4px;
}

@media only screen
and (min-width: 768px) {
  .winners-banner-month h2 {
    text-align: right;
    padding-top: 0;
    padding-right: 10px;
  }

  .winners-banner-month h4 {
    text-align: right;
    padding-right: 10px;
  }
}

.winners-banner-winner {
  font-size: 16px;
  padding-top: 10px;
}

.winners-banner-winner div {
  padding-bottom: 8px;
}

.play-button {
  cursor: pointer;
}

.voting .play-button {
  margin-bottom: 4px;
}

@media (max-width: 767px) {
  .table-responsive {
    border: 1px solid #e11a1a;
  }
}

@media only screen
and (min-device-width : 320px)
and (max-device-width : 568px) {
  .navbar-header a img {
    width: 200px;
    padding-top: 12px;
    padding-left: 4px;
  }

  .js-grid-text-100,
  .js-grid-text-200,
  .js-grid-text-400,
  .js-grid-text-500 {
    display: none;
  }
}

::-webkit-input-placeholder {
  font-style: italic;
}

::-moz-placeholder {
  font-style: italic;
}

:-ms-input-placeholder {
  font-style: italic;
}

::-ms-input-placeholder {
  font-style: italic;
}

